remove deprecated jvm option