@@ -8,7 +8,6 @@ fork in Test := true
 javaOptions ++= Seq(
   "-Xms512M",
   "-Xmx2048M",
-  "-XX:MaxPermSize=2048M",
   "-XX:+CMSClassUnloadingEnabled"
 )
 parallelExecution in Test := false
